RESOLVED FIXED 160571
Flaky Test: editing/spelling/spellcheck-async.html
https://bugs.webkit.org/show_bug.cgi?id=160571
Summary Flaky Test: editing/spelling/spellcheck-async.html
WebKit Commit Bot
Reported 2016-08-04 15:16:43 PDT
This is an automatically generated bug from the commit-queue. editing/spelling/spellcheck-async.html has been flaky on the commit-queue. editing/spelling/spellcheck-async.html was authored by g.czajkowski@samsung.com and mark.lam@apple.com. http://trac.webkit.org/browser/trunk/LayoutTests/editing/spelling/spellcheck-async.html The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 285365 [details] on bug 160524. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.10.5 The bots will update this with information from each new failure. If you believe this bug to be fixed or invalid, feel free to close. The bots will re-open if the flake re-occurs. If you would like to track this test fix with another bug, please close this bug as a duplicate. The bots will follow the duplicate chain when making future comments.
Attachments
Archive of layout-test-results from webkit-cq-03 (870.66 KB, application/zip)
2016-08-04 15:16 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (766.65 KB, application/zip)
2017-01-21 19:56 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (1.02 MB, application/zip)
2017-02-14 09:28 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (787.07 KB, application/zip)
2017-02-22 18:56 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (878.90 KB, application/zip)
2017-02-23 09:07 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (807.19 KB, application/zip)
2017-02-23 11:26 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (1.10 MB, application/zip)
2017-02-23 12:13 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (949.10 KB, application/zip)
2017-03-14 19:08 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (985.40 KB, application/zip)
2017-04-27 12:20 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (979.64 KB, application/zip)
2017-04-27 15:12 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (1.08 MB, application/zip)
2017-04-29 20:32 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (1009.20 KB, application/zip)
2017-07-03 16:44 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (1.06 MB, application/zip)
2017-07-12 10:22 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (1011.42 KB, application/zip)
2017-07-14 12:16 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (1.09 MB, application/zip)
2017-07-14 13:48 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (2.16 MB, application/zip)
2017-11-29 09:06 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (2.42 MB, application/zip)
2017-11-30 16:53 PST, WebKit Commit Bot
no flags
Patch (2.51 KB, patch)
2020-03-06 17:29 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from webkit-cq-01 (4.54 MB, application/zip)
2020-03-06 18:24 PST, WebKit Commit Bot
no flags
Patch (3.73 KB, patch)
2020-03-06 20:49 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from webkit-cq-01 (4.16 MB, application/zip)
2020-03-06 22:57 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (4.08 MB, application/zip)
2020-03-06 23:38 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-02 (3.96 MB, application/zip)
2020-03-07 19:40 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (4.05 MB, application/zip)
2020-03-07 19:49 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (4.07 MB, application/zip)
2020-03-08 13:32 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-03 (4.15 MB, application/zip)
2020-03-08 17:35 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (4.09 MB, application/zip)
2020-03-08 17:42 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (4.49 MB, application/zip)
2020-03-09 08:45 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2016-08-04 15:16:47 PDT
Created attachment 285371 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 2 2017-01-21 19:56:16 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 299447 [details] on bug 167260. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 3 2017-01-21 19:56:18 PST
Created attachment 299454 [details] Archive of layout-test-results from webkit-cq-02
WebKit Commit Bot
Comment 4 2017-02-14 09:28:33 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 301508 [details] on bug 168303. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 5 2017-02-14 09:28:35 PST
Created attachment 301512 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 6 2017-02-22 18:56:06 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 302472 [details] on bug 168755. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 7 2017-02-22 18:56:08 PST
Created attachment 302480 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 8 2017-02-23 09:07:17 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 302511 [details] on bug 168735. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 9 2017-02-23 09:07:19 PST
Created attachment 302517 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 10 2017-02-23 11:26:57 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 302530 [details] on bug 168783. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 11 2017-02-23 11:26:59 PST
Created attachment 302544 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 12 2017-02-23 12:13:33 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 302530 [details] on bug 168783. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 13 2017-02-23 12:13:35 PST
Created attachment 302556 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 14 2017-03-14 19:08:01 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 304458 [details] on bug 169615. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 15 2017-03-14 19:08:04 PDT
Created attachment 304462 [details] Archive of layout-test-results from webkit-cq-02
WebKit Commit Bot
Comment 16 2017-04-27 12:20:08 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 308415 [details] on bug 171381. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 17 2017-04-27 12:20:09 PDT
Created attachment 308425 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 18 2017-04-27 15:12:12 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 308445 [details] on bug 171367. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 19 2017-04-27 15:12:13 PDT
Created attachment 308457 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 20 2017-04-29 20:32:26 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 308657 [details] on bug 171394. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 21 2017-04-29 20:32:27 PDT
Created attachment 308680 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 22 2017-07-03 16:44:11 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 314528 [details] on bug 174106. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 23 2017-07-03 16:44:12 PDT
Created attachment 314537 [details] Archive of layout-test-results from webkit-cq-02
WebKit Commit Bot
Comment 24 2017-07-12 10:22:41 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 315250 [details] on bug 174374. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 25 2017-07-12 10:22:42 PDT
Created attachment 315257 [details] Archive of layout-test-results from webkit-cq-02
WebKit Commit Bot
Comment 26 2017-07-14 12:16:11 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 315463 [details] on bug 174513. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 27 2017-07-14 12:16:12 PDT
Created attachment 315469 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 28 2017-07-14 13:48:27 PDT
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 315479 [details] on bug 174426. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 29 2017-07-14 13:48:28 PDT
Created attachment 315482 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 30 2017-11-29 09:06:33 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 327853 [details] on bug 180120. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 31 2017-11-29 09:06:34 PST
Created attachment 327860 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 32 2017-11-30 16:53:29 PST
The commit-queue just saw editing/spelling/spellcheck-async.html flake (DumpRenderTree crashed) while processing attachment 328047 [details] on bug 179343. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 33 2017-11-30 16:53:30 PST
Created attachment 328057 [details] Archive of layout-test-results from webkit-cq-02
Simon Fraser (smfr)
Comment 34 2020-03-06 17:29:02 PST
Simon Fraser (smfr)
Comment 35 2020-03-06 17:30:49 PST
*** Bug 158401 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 36 2020-03-06 17:30:58 PST
*** Bug 206178 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 37 2020-03-06 17:31:06 PST
*** Bug 207995 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 38 2020-03-06 17:31:14 PST
*** Bug 208159 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 39 2020-03-06 18:24:54 PST
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392819 [details] on bug 160571. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 40 2020-03-06 18:24:56 PST
Created attachment 392827 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 41 2020-03-06 18:24:58 PST
The commit-queue encountered the following flaky tests while processing attachment 392819 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 160571 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 42 2020-03-06 18:25:35 PST
Comment on attachment 392819 [details] Patch Clearing flags on attachment: 392819 Committed r258048: <https://trac.webkit.org/changeset/258048>
WebKit Commit Bot
Comment 43 2020-03-06 18:25:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 44 2020-03-06 18:26:32 PST
Simon Fraser (smfr)
Comment 45 2020-03-06 20:45:45 PST
Reopen for new patch.
Simon Fraser (smfr)
Comment 46 2020-03-06 20:49:12 PST
WebKit Commit Bot
Comment 47 2020-03-06 21:46:14 PST
Comment on attachment 392846 [details] Patch Clearing flags on attachment: 392846 Committed r258061: <https://trac.webkit.org/changeset/258061>
WebKit Commit Bot
Comment 48 2020-03-06 21:46:17 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 49 2020-03-06 22:57:16 PST
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392821 [details] on bug 208690. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 50 2020-03-06 22:57:18 PST
Created attachment 392850 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 51 2020-03-06 23:38:33 PST
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392123 [details] on bug 208119. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 52 2020-03-06 23:38:35 PST
Created attachment 392852 [details] Archive of layout-test-results from webkit-cq-03
Simon Fraser (smfr)
Comment 53 2020-03-07 10:46:49 PST
Well now I'm all out of ideas.
Alexey Proskuryakov
Comment 54 2020-03-07 13:21:23 PST
Since other spellchecking tests continue to crash, this one probably isn't fixed either. Reopening this bug to give CQ a place to comment.
WebKit Commit Bot
Comment 55 2020-03-07 19:40:54 PST
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392926 [details] on bug 208687. Bot: webkit-cq-02 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 56 2020-03-07 19:40:55 PST
Created attachment 392931 [details] Archive of layout-test-results from webkit-cq-02
WebKit Commit Bot
Comment 57 2020-03-07 19:49:54 PST
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392929 [details] on bug 208775. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 58 2020-03-07 19:49:55 PST
Created attachment 392932 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 59 2020-03-08 13:32:14 PDT
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392943 [details] on bug 208757. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 60 2020-03-08 13:32:15 PDT
Created attachment 392979 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 61 2020-03-08 17:35:47 PDT
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392974 [details] on bug 208402. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 62 2020-03-08 17:35:49 PDT
Created attachment 393002 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 63 2020-03-08 17:42:49 PDT
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 392998 [details] on bug 208785. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 64 2020-03-08 17:42:51 PDT
Created attachment 393004 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 65 2020-03-09 08:45:26 PDT
The commit-queue just saw editing/spelling/spellcheck-async-remove-frame.html flake (DumpRenderTree crashed) while processing attachment 393020 [details] on bug 208801. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 66 2020-03-09 08:45:27 PDT
Created attachment 393038 [details] Archive of layout-test-results from webkit-cq-01
Simon Fraser (smfr)
Comment 67 2020-03-19 18:19:00 PDT
Nothing after 3/9
Note You need to log in before you can comment on or make changes to this bug.