Flaky Test: editing/spelling/spellcheck-async.html https://bugs.webkit.org/show_bug.cgi?id=160571

Reviewed by Tim Horton.

The old code called -performSelector:target:... with an autoreleased target,
and nothing keeps the target alive until the call to -perform on the main thread.

Change this to a block which copies in a RetainPtr<> to make ownership clearer
and fix the crash.

* WebCoreSupport/WebEditorClient.mm:
(WebEditorClient::requestCheckingOfString):


Canonical link: https://commits.webkit.org/221657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258048 268f45cc-cd09-0410-ab3c-d52691b4dbfc